Cleaned and removed old statements

--- a/content/_posts/2010-12-18-2010-in-a-nutshell.md
+++ b/content/_posts/2010-12-18-2010-in-a-nutshell.md
@@ -9,18 +9,18 @@ dsq_thread_id:
 categories:
   - post
 ---
-Its that time of year where I like to look back and summarise what I&#8217;ve done, ready for the new years plans. So in 2010&#8230;
+Its that time of year where I like to look back and summarise what I've done, ready for the new years plans. So in 2010:
 
   * I lead development for [Ribot][1] on the [Tesco Grocery App for Nokia][2] which allows customers to shop from their phones, [released back in the summer][3].
-  * I had 2 articles published for [.net magazine][4] &#8211; a PhoneGap tutorial and an opinion piece on Responsive Web Design (expect to hear a lot more on that subject in the new year!).
+  * I had 2 articles published for [.net magazine][4] - a PhoneGap tutorial and an opinion piece on Responsive Web Design (expect to hear a lot more on that subject in the new year!).
   * I gave a well subscribed [talk on PhoneGap][5] at a local JavaScript user group, asyncjs
-  * We grew the development team at Ribot, and were lucky enough to snag [Jason Fry][6] &#8211; an Android developer in high demand.
+  * We grew the development team at Ribot, and were lucky enough to snag [Jason Fry][6] - an Android developer in high demand.
   * I popped along to the fantastic [mlove festival in Germany][7], something to look out for next year
   * The rest of the time I worked on some secret projects, one of which will be released early next year
 
 In summary a year of mobile web, including plenty of JavaScript, PhoneGap, responsive web design and testing.
 
-Outside of work I moved into a nice little 1 bed apartment with my girlfriend, cat and 2 hamsters, watched some great films with [@ribotminimus][8], invested in some of the worlds best kitchen equipment and subsequently did lots of cooking. In an attempt to keep RSI at bay, I did very little blogging and personal projects this year, but lots of exercise. RSI stayed away, so this year I might tempt fate a little&#8230;
+Outside of work I moved into a nice little 1 bed apartment with my girlfriend, cat and 2 hamsters, watched some great films with [@ribotminimus][8], invested in some of the worlds best kitchen equipment and subsequently did lots of cooking. In an attempt to keep RSI at bay, I did very little blogging and personal projects this year, but lots of exercise. RSI stayed away, so this year I might tempt fate a little...
 
  [1]: http://ribot.co.uk/
  [2]: http://www.tesco.com/apps/nokia/
